--- a/index.html
+++ b/index.html
@@ -51,19 +51,22 @@
 
       <!--         image div -->
       <div class="image-div">
-        <img class="image"
-          src="images/my profile.jpg"
-          alt="iamge">
+        <img class="image" src="images/my profile.jpg" alt="iamge">
       </div>
 
       <!--         greetin and name div -->
       <div class="greeting-div">
         <div id="greetin-child">
-          <h1>Hi there 👋 </h1>
+          <h1>Hi there 👋</h1>
           <h1>I am <span id="name">SHIVAM</span></h1>
-          <a href="#me-section"><button class="button">Discover</button></a>
+          <a href="images/Shivam_Pate_resume.pdf" target="_blank">
+            <button class="button">RESUME</button>
+          </a>
         </div>
       </div>
+      
+
+
     </div>
 
   </section>
@@ -75,21 +78,32 @@
       <!--       first div -->
       <div class="about-myself">
         <h2>Hi all! I'm Shivam</h2>
-        <p class="desc-font">Student at AITR, Indore | GDSC'22 Android Facilitator 📱| GDSC AITR Core Team Member</p>
+        <!-- <p class="desc-font">Student at AITR, Indore | GDSC'22 Android Facilitator 📱| GDSC AITR Core Team Member</p> -->
+
+        <p class="desc-font">Flutter Developer | Freelancer | Community Enthusiast</p>
+        <p class="desc-font">With a year of startup experience, I build high-performance apps using Flutter. As a freelancer, I deliver impactful solutions, and I'm passionate about contributing to the tech community.</p>
+
       </div>
 
       <!--       second div -->
       <div class="about-myknowledge">
         <div class="prof1">
-          <p class="time-p">2021 - PRESENT</p>
-          <h4 class="desc-font">Android Developer</h4>
-          <p class="desc-font">Working happily on my own Android projects</p>
+          <p class="time-p">Sep 2023 - PRESENT</p>
+          <h4 class="desc-font">Flutter Developer at InTouch Software Solutions (Full Time)</h4>
+          <p class="desc-font">Thriving in a startup environment, I passionately manage clients and craft cutting-edge
+            solutions that redefine possibilities!</p>
         </div>
         <div class="prof1">
           <p class="time-p"></p>
-          <h4 class="desc-font">Web Developer</h4>
-          <p class="desc-font">Learing in progress 🚀</p>
+          <p class="time-p">Jan 2024 - March 2024 (Part Time)</p>
+          <h4 class="desc-font">EX- Flutter Developer at Audicate</h4>
         </div>
+        <div class="prof1">
+          <p class="time-p"></p>
+          <p class="time-p">July 2023 - July 2024 (College Club affiliated by Google)</p>
+          <h4 class="desc-font">EX- Mobile Developer Lead at GDSC</h4>
+        </div>
+
       </div>
     </div>
   </section>
@@ -101,33 +115,23 @@
       <div class="achive-post-container">
 
         <div class="gdsc_mail achive-div">
-          <img class="image-size"
-            src="images/gdsc.png"
-            alt="gdsc_selected">
+          <img class="image-size" src="images/gdsc.png" alt="gdsc_selected">
         </div>
 
         <div class="trivia-mail achive-div">
-          <img class="image-size"
-            src="images/top10.jpeg"
-            alt="triva_top10">
+          <img class="image-size" src="images/top10.jpeg" alt="triva_top10">
         </div>
 
         <div class="facilitator achive-div">
-          <img class="image-size"
-            src="images/facilitator.jpg"
-            alt="gdsc_selected">
+          <img class="image-size" src="images/facilitator.jpg" alt="gdsc_selected">
         </div>
 
         <div class="moreficent-aapathon achive-div">
-          <img class="image-size"
-            src="images/aapathon.jpeg"
-            alt="gdsc_selected">
+          <img class="image-size" src="images/aapathon.jpeg" alt="gdsc_selected">
         </div>
 
         <div class="republic-hackathon achive-div">
-          <img class="image-size"
-            src="images/hackathonr.jpg"
-            alt="gdsc_selected">
+          <img class="image-size" src="images/hackathonr.jpg" alt="gdsc_selected">
         </div>
 
       </div>
@@ -136,12 +140,121 @@
 
   <hr class="hr-tag">
 
-  <!-- ==========================================Project work============================================= -->
+
+
+
+
+
+
+
+  <!-- ========================================== Latest work============================================= -->
   <section id="my-work">
     <div class="work-outer-container">
       <!--        work experience   -->
       <div class="section-heading">
-        <h2>Projects</h2>
+        <h2>Latest Work</h2>
+        <p class="desc-font">Check out my industrial work</p>
+      </div>
+
+      <div class="work-inner">
+
+        <div class="project-left">
+          <div class="project-detail" >
+            <h4 class="desc-font">MyAstro Sathi ( 500+ Downloads )</h4>
+            <a href="https://play.google.com/store/apps/details?id=com.astro.flutter_chat_app&hl=en-IN" target="_blank">
+              <p class="time-p">Play Store link</p>
+            </a>
+            <p class="desc-font">Chat and call with astrologers, Daily, Weekly, Monthly and Yearly Horoscope, Book a pooja, Blogs and Online Virtual Pooja.</p>
+            <p class="desc-font">
+              Tech stack: Flutter, Dart, REST API, Pusher, Onesignal, Zeegocloud, Block and Provider.
+            </p>
+          </div>
+          <img class="project-img" src="images/my_astro_app.png" alt="app-image">
+        </div>
+
+        <div class="project-left">
+          <img class="project-img" src="images/tiffino_app.png" alt="app-image">
+          <div class="project-detail">
+            <h4 class="desc-font">Tiffino : Home Food Delivery (100+ Downloads)</h4>
+            <a href="https://play.google.com/store/apps/details?id=com.tiffino.its_tiffino" target="_blank">
+              <p class="time-p">Play Store link</p>
+            </a>
+            <p class="desc-font">
+              Food Delivery services with Daily tiffin subscription, wide
+              range of categories.              
+            </p>
+          </div>
+        </div>
+
+
+
+        <div class="project-left">
+          <div class="project-detail">
+            <h4 class="desc-font">Kisaan Mart (Grocery app) - Newly Published</h4>
+            <a href="https://play.google.com/store/apps/details?id=com.its.kisaan_mart.kisaan_mart" target="_blank">
+              <p class="time-p">Play Store link</p>
+            </a>
+            <p class="desc-font">
+              Online Grocery shopping app.
+            </p>
+          </div>
+          <img class="project-img" src="images/kisaan_mart_app.png" alt="app-image">
+        </div>
+
+        <div class="project-left">
+          <img class="project-img" src="images/lx_app.png" alt="app-image">
+          <div class="project-detail">
+            <h4 class="desc-font">Lanka Express (Currently Working)</h4>
+            <p class="desc-font">
+              Realtime drop off points from Geolocation and OpenStreetMap, Membership plans, Engaging Socials community, Realtime shipping tracking.
+            </p>
+          </div>
+        </div>
+
+
+        <!-- <div class="project-left">
+          <div class="project-detail">
+            <h4 class="desc-font">Mandi Setu (Currently Working)</h4>
+            <p class="desc-font">
+              A single platform that provides you with the viability of checking your academic performance, attendance,
+              lab reports, due assignments, updated notices, and lastly your all the fee-related hustle.
+            </p>
+          </div>
+          <img class="project-img" src="images/tiffino_app.png" alt="app-image">
+        </div> -->
+
+
+      </div>
+
+    </div>
+
+  </section>
+
+
+
+
+
+
+  <div class="section-heading">
+    <h2></h2>
+    <!-- <p class="desc-font">Check out my industrial work</p> -->
+  </div>
+
+
+
+
+
+
+
+
+
+  <!-- ==========================================Project work============================================= -->
+  <!-- <section id="my-work"> -->
+  <section>
+    <div class="work-outer-container">
+      <!--        work experience   -->
+      <div class="section-heading">
+        <h2>Personal Projects</h2>
         <p class="desc-font">Check out some of my work</p>
       </div>
 
@@ -150,22 +263,24 @@
         <div class="project-left">
           <div class="project-detail">
             <h4 class="desc-font">Acropolis application</h4>
+            <a href="https://github.com/TheShivamPatel/Acropolis-Cloud" target="_blank">
+              <p class="time-p">Play Store link</p>
+            </a>
             <p class="desc-font">
               A single platform that provides you with the viability of checking your academic performance, attendance,
               lab reports, due assignments, updated notices, and lastly your all the fee-related hustle.
             </p>
           </div>
-          <img class="project-img"
-            src="images/acro_app.png"
-            alt="app-image">
+          <img class="project-img" src="images/acro_app.png" alt="app-image">
         </div>
 
         <div class="project-left">
-          <img class="project-img"
-            src="images/creative_app.png"
-            alt="app-image">
+          <img class="project-img" src="images/creative_app.png" alt="app-image">
           <div class="project-detail">
             <h4 class="desc-font">Creative Wallpapers</h4>
+            <a href="https://github.com/TheShivamPatel/Creative_Wallpapers" target="_blank">
+              <p class="time-p">Play Store link</p>
+            </a>
             <p class="desc-font">
               Thousands of high quality wallpapers-4k, nature, dark, space, amoled, & more from Pexels. Pexels: The
               largest open collection of high-quality photos.
@@ -175,10 +290,10 @@
 
       </div>
 
-      <div class="more-btn-container">
+      <!-- <div class="more-btn-container">
         <a><button class="more-btn">Load more -> </button></a>
       </div>
-    </div>
+    </div> -->
 
   </section>
 
@@ -213,9 +328,7 @@
         </div>
       </div>
       <div class="ar-mocup">
-        <img class="ar-image"
-          src="images/ar_effect.png"
-          alt="spark-ar-image">
+        <img class="ar-image" src="images/ar_effect.png" alt="spark-ar-image">
       </div>
     </div>
   </section>
@@ -235,7 +348,7 @@
       <!--       skills logo -->
       <div class="skills-div">
 
-        <div class="logo-div">
+        <!-- <div class="logo-div">
           <img src="images/html5.png" alt="html_logo">
           <p class="desc-font">HTML</p>
         </div>
@@ -250,16 +363,21 @@
             src="images/js.webp"
             alt="Javascript_logo">
           <p class="desc-font">JavaScript</p>
-        </div>
+        </div> -->
 
         <div class="logo-div">
           <img src="images/android.png" alt="android_logo">
           <p class="desc-font">Android</p>
         </div>
 
+
         <div class="logo-div">
-          <img width="100px" src="images/firebase.png"
-            alt="firebase_logo">
+          <img src="images/flutter_icon.png" alt="python_logo">
+          <p class="desc-font">Flutter</p>
+        </div>
+
+        <div class="logo-div">
+          <img width="100px" src="images/firebase.png" alt="firebase_logo">
           <p class="desc-font">Firebase</p>
         </div>
 
@@ -269,15 +387,7 @@
         </div>
 
         <div class="logo-div">
-          <img src="images/python.png"
-            alt="python_logo">
-          <p class="desc-font">Python</p>
-        </div>
-
-        <div class="logo-div">
-          <img
-            src="images/cpp.png"
-            alt="cpp_logo">
+          <img src="images/cpp.png" alt="cpp_logo">
           <p class="desc-font">C++</p>
         </div>
       </div>
@@ -346,6 +456,7 @@
       </div>
     </div>
   </section>
+
 
 
   <!-- ===========================================contact section================================================= -->
