--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2>Hi all! I'm Shivam</h2>
         <!-- <p class="desc-font">Student at AITR, Indore | GDSC'22 Android Facilitator 📱| GDSC AITR Core Team Member</p> -->
 
-        <p class="desc-font">Flutter Developer | Freelancer | Community Enthusiast</p>
+        <p class="desc-font">Flutter Developer | Android Native Developer | Freelancer | Community Enthusiast</p>
         <p class="desc-font">With a year of startup experience, I build high-performance apps using Flutter. As a freelancer, I deliver impactful solutions, and I'm passionate about contributing to the tech community.</p>
 
       </div>
@@ -180,8 +180,7 @@
               <p class="time-p">Play Store link</p>
             </a>
             <p class="desc-font">
-              Food Delivery services with Daily tiffin subscription, wide
-              range of categories.              
+              Discover Tiffino, where homemade goodness meets convenience. Enjoy freshly prepared dishes delivered to your doorstep, with customizable subscription plans tailored to your daily lunch and dinner needs.            
             </p>
           </div>
         </div>
@@ -195,7 +194,7 @@
               <p class="time-p">Play Store link</p>
             </a>
             <p class="desc-font">
-              Online Grocery shopping app.
+              Introducing Kisaan Mart - your go-to app for grocery delivery in as fast as one hour. Shop from over 500+ products, including groceries, personal care, household essentials, and more, all at the best prices. Convenient, hassle-free shopping just a click away.
             </p>
           </div>
           <img class="project-img" src="images/kisaan_mart_app.png" alt="app-image">
@@ -264,7 +263,7 @@
           <div class="project-detail">
             <h4 class="desc-font">Acropolis application</h4>
             <a href="https://github.com/TheShivamPatel/Acropolis-Cloud" target="_blank">
-              <p class="time-p">Play Store link</p>
+              <p class="time-p">Github link</p>
             </a>
             <p class="desc-font">
               A single platform that provides you with the viability of checking your academic performance, attendance,
@@ -279,7 +278,7 @@
           <div class="project-detail">
             <h4 class="desc-font">Creative Wallpapers</h4>
             <a href="https://github.com/TheShivamPatel/Creative_Wallpapers" target="_blank">
-              <p class="time-p">Play Store link</p>
+              <p class="time-p">Github link</p>
             </a>
             <p class="desc-font">
               Thousands of high quality wallpapers-4k, nature, dark, space, amoled, & more from Pexels. Pexels: The
